--- a/public/index.html
+++ b/public/index.html
@@ -50,7 +50,7 @@
           <p class="big-info-text">
             He used to code for Google but now he makes designs for animation studios.
           </p>
-          <button id="big-info-button" class="scroll-button">Learn More</button>
+          <button id="big-info-button" class="scroll-button">SCROLL DOWN</button>
         </div>
       </div>
       <div id="above-right">
@@ -106,7 +106,7 @@
     </div>
 
     <div class="clouds" style="z-index: 0;">
-      <div class="cloud layer-1" style="left: 5%; top: -14vh"></div>
+      <div class="cloud layer-1" style="left: 5%; top: -8vh"></div>
       <div class="cloud layer-2" style="left: 67%; top: 30vh"></div>
       <div class="cloud layer-1" style="left: 100%; top: 70vh"></div>
       <div class="cloud layer-2" style="left: 0%; top: 120vh"></div>
