--- a/public/index.html
+++ b/public/index.html
@@ -50,7 +50,7 @@
           <p class="big-info-text">
             He used to code for Google but now he makes designs for animation studios.
           </p>
-          <button id="big-info-button" class="scroll-button">SCROLL DOWN</button>
+          <button id="big-info-button" class="db-button">SCROLL DOWN</button>
         </div>
       </div>
       <div id="above-right">
@@ -67,40 +67,71 @@
     <div id="below-cloud">
       <div id="nimbus-path" style="z-index: 0">
         <svg xmlns="http://www.w3.org/2000/svg" viewbox="0 0 100 500" preserveAspectRatio="none">
-          <path d="M 80 -40 l 0 130 l -65 100 l 70 100 l -70 100 l 0 100" />
+          <path d="M 80 -40 l 0 130 l -65 100 l 70 100 l -70 100 l 0 100" stroke-linecap="round"
+            stroke-linejoin="bevel" />
           <div id="nimbus-element"></div>
         </svg>
       </div>
 
-      <div class="cloud-info" style="left:7%; top: 70vh;">
+      <div class="info" style="left:7%; top: 70vh;">
         <h2>University of Toronto</h2>
         <p>On TikTok, "mogging" is a part of the "looksmaxxing" trend, which focuses on improving one's appearance.
           It refers to being more physically attractive than others, and can involve factors like height, hair, fashion,
           and voice.
           To "mog" someone is to look better than them.</p>
-        <button class="scroll-button" id="button-0"></button>
+        <button class="db-button" id="button-0"></button>
       </div>
-      <div class="cloud-info" style="right:7%; top: 150vh;">
+      <div class="info" style="right:7%; top: 150vh;">
         <h2>Software Engineer - Google</h2>
         <p>On TikTok, "mogging" is a part of the "looksmaxxing" trend, which focuses on improving one's appearance.
           It refers to being more physically attractive than others, and can involve factors like height, hair, fashion,
           and voice.
           To "mog" someone is to look better than them.</p>
-        <button class="scroll-button" id="button-1"></button>
+        <button class="db-button" id="button-1"></button>
       </div>
-      <div class="cloud-info" style="left:7%; top: 250vh;">
+      <div class="info" style="left:7%; top: 250vh;">
         <h2>SKILLS</h2>
         <p>
-          Because he's been in the business for so long, David has basically touched most frameworks and languages invented by man.
+          Because he's been in the business for so long, David has basically touched most frameworks and languages
+          invented by man.
         </p>
-        <button class="scroll-button" id="button-2"></button>
+        <button class="db-button" id="button-2"></button>
       </div>
-      <div class="cloud-info" style="right:7%; bottom: 60vh;">
-        <p>David is currently located in Los Angeles where he spends most of his free time developing TV pitches that no one will ever see. </p>
+      <div class="info cloud" style="flex-direction: row; left:30%; top: 260vh;">
+        <div style="left:10%; top: 290vh;">
+          <div class="icon" style="background-image: url('assets/icon-swift.svg')"></div>
+          <p>Swift</p>
+        </div>
+        <div style="left:30%; top: 300vh;">
+          <div class="icon" style="background-image: url('assets/icon-java.svg')"></div>
+          <p>Java</p>
+        </div>
+        <div style="left:50%; top: 310vh;">
+          <div class="icon" style="background-image: url('assets/icon-python.svg')"></div>
+          <p>Python</p>
+        </div>
+        <div style="left:60%; top: 320vh;">
+          <div class="icon" style="background-image: url('assets/icon-dart.svg')"></div>
+          <p>Swift</p>
+        </div>
+        <div style="left:20%; top: 330vh;">
+          <div class="icon" style="background-image: url('assets/icon-ts.svg')"></div>
+          <p>Swift</p>
+        </div>
+      </div>
+      <div class="info" style="right:7%; bottom: 50vh;">
+        <p>David is currently located in Los Angeles where he spends most of his free time developing TV pitches that no
+          one will ever see. </p>
         <p>He's on social media. Why not give him a follow?</p>
       </div>
-      <div class="cloud-info" style="left:20%; bottom: 35vh;">
-        <p>SOCIAL MEDIA</p>
+      <div class="db-button" style="position: absolute; left:30%; bottom: 35vh;">
+        <div class="icon" style="background-image: url('assets/icon-instagram.svg')"></div>
+      </div>
+      <div class="db-button" style="position: absolute; left:50%; bottom: 45vh;">
+        <div class="icon" style="background-image: url('assets/icon-linkedin.svg')"></div>
+      </div>
+      <div class="db-button" style="position: absolute; left:70%; bottom: 40vh;">
+        <div class="icon" style="background-image: url('assets/icon-email.svg')"></div>
       </div>
       <div id="ground" style="bottom: 0;"></div>
     </div>
