--- a/public/index.html
+++ b/public/index.html
@@ -43,14 +43,14 @@
       <div class="spacer"></div>
       <div id="above-left">
         <div id="big-info">
-          <h1 id="big-info-header">DAVID LU</h1>
-          <p class="big-info-text">
+          <h1>DAVID LU</h1>
+          <p>
             David is a software engineer and artist with a decade's worth of professional experience.
           </p>
-          <p class="big-info-text">
+          <p>
             He used to code for Google but now he makes designs for animation studios.
           </p>
-          <button id="big-info-button" class="db-button">SCROLL DOWN</button>
+          <button class="db-button">SCROLL DOWN</button>
         </div>
       </div>
       <div id="above-right">
@@ -73,7 +73,7 @@
         </svg>
       </div>
 
-      <div class="info" style="left:7%; top: 70vh;">
+      <div class="info" style="left:7%; top: 50vh;">
         <h2>University of Toronto</h2>
         <p>On TikTok, "mogging" is a part of the "looksmaxxing" trend, which focuses on improving one's appearance.
           It refers to being more physically attractive than others, and can involve factors like height, hair, fashion,
@@ -81,7 +81,7 @@
           To "mog" someone is to look better than them.</p>
         <button class="db-button" id="button-0"></button>
       </div>
-      <div class="info" style="right:7%; top: 150vh;">
+      <div class="info" style="right:7%; top: 125vh;">
         <h2>Software Engineer - Google</h2>
         <p>On TikTok, "mogging" is a part of the "looksmaxxing" trend, which focuses on improving one's appearance.
           It refers to being more physically attractive than others, and can involve factors like height, hair, fashion,
@@ -89,7 +89,7 @@
           To "mog" someone is to look better than them.</p>
         <button class="db-button" id="button-1"></button>
       </div>
-      <div class="info" style="left:7%; top: 250vh;">
+      <div class="info" style="left:7%; top: 200vh;">
         <h2>SKILLS</h2>
         <p>
           Because he's been in the business for so long, David has basically touched most frameworks and languages
@@ -97,40 +97,34 @@
         </p>
         <button class="db-button" id="button-2"></button>
       </div>
-      <div class="info cloud" style="flex-direction: row; left:30%; top: 260vh;">
+      <div class="info cloud" style="flex-direction: row; right:10%; top: 240vh;">
         <div style="left:10%; top: 290vh;">
           <div class="icon" style="background-image: url('assets/icon-swift.svg')"></div>
-          <p>Swift</p>
         </div>
         <div style="left:30%; top: 300vh;">
           <div class="icon" style="background-image: url('assets/icon-java.svg')"></div>
-          <p>Java</p>
         </div>
         <div style="left:50%; top: 310vh;">
           <div class="icon" style="background-image: url('assets/icon-python.svg')"></div>
-          <p>Python</p>
         </div>
         <div style="left:60%; top: 320vh;">
           <div class="icon" style="background-image: url('assets/icon-dart.svg')"></div>
-          <p>Swift</p>
         </div>
         <div style="left:20%; top: 330vh;">
           <div class="icon" style="background-image: url('assets/icon-ts.svg')"></div>
-          <p>Swift</p>
         </div>
       </div>
       <div class="info" style="right:7%; bottom: 50vh;">
-        <p>David is currently located in Los Angeles where he spends most of his free time developing TV pitches that no
-          one will ever see. </p>
+        <p>David is currently located in Los Angeles where he spends most of his free time taking care of his twelve cats.</p>
         <p>He's on social media. Why not give him a follow?</p>
       </div>
       <div class="db-button" style="position: absolute; left:30%; bottom: 35vh;">
         <div class="icon" style="background-image: url('assets/icon-instagram.svg')"></div>
       </div>
-      <div class="db-button" style="position: absolute; left:50%; bottom: 45vh;">
+      <div class="db-button" style="position: absolute; left:50%; bottom: 45vh; transform: scale(0.75)">
         <div class="icon" style="background-image: url('assets/icon-linkedin.svg')"></div>
       </div>
-      <div class="db-button" style="position: absolute; left:70%; bottom: 40vh;">
+      <div class="db-button" style="position: absolute; left:70%; bottom: 40vh; transform: scale(0.9)">
         <div class="icon" style="background-image: url('assets/icon-email.svg')"></div>
       </div>
       <div id="ground" style="bottom: 0;"></div>
